Code and git refactorings based on MR