@@ -26,8 +26,7 @@ public class SonarQubeTests {
     public static final String newLine = System.lineSeparator();
     private static ArrayList<Issue> issues;
     private static final String rulePrefix = "java:S";
-    private static final String projectEntryPath = "src/main/java";
-    private static final String packagePath = "edu/kit/informatik/";
+    private static final String projectEntryPath = "src/main/java/edu/kit/informatik/";
     private static final String javaFilePrefix = ".java";
 
     @BeforeAll
@@ -35,7 +34,7 @@ public class SonarQubeTests {
         issues = new ArrayList<Issue>();
 
         Path javaPlugin = getJavaPlugin();
-        var path = Path.of(projectEntryPath, packagePath).toAbsolutePath();
+        var path = Path.of(projectEntryPath).toAbsolutePath();
         var javaFiles = getFiles(path);
 
         StandaloneGlobalConfiguration configuration = StandaloneGlobalConfiguration.builder().addEnabledLanguage(Language.JAVA).addPlugins(javaPlugin).setWorkDir(path).build();
@@ -48,39 +47,37 @@ public class SonarQubeTests {
 //    @DisplayName("Test NonFinalAttributesShouldBeFinal")
 //    @Test
 //    void testNonFinalAttributesShouldBeFinal() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test SystemDependentLineBreak")
 //    @Test
 //    void testSystemDependentLineBreak() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test RawType")
     @Test
     void testRawType() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "3740"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "3740");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
     @DisplayName("Test ConcreteClassInsteadOfInterface")
     @Test
     void testConcreteClassInsteadOfInterface() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1319"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "1319");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
     @DisplayName("Test AssertInsteadOfIfLoop")
     @Test
     void testAssertInsteadOfIfLoop() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "5960",
-                        rulePrefix + "4274"
-                )
+        List<String> relevantIssueNumbers = List.of(
+             rulePrefix + "5960",
+            rulePrefix + "4274"
         );
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
@@ -88,84 +85,84 @@ public class SonarQubeTests {
 //    @DisplayName("Test ObjectInsteadOfConcreteClass")
 //    @Test
 //    void testObjectInsteadOfConcreteClass() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test PublicEnumInsideClassAndNotInSeparateFile")
 //    @Test
 //    void testPublicEnumInsideClassAndNotInSeparateFile() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test VisibilityAsLowAsPossible")
 //    @Test
 //    void testVisibilityAsLowAsPossible() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test Code Duplication")
     @Test
     void testCodeDuplication() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "4144"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "4144");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
 //    @DisplayName("Test CodeDuplicationRepetitionsFixableByInheritance")
 //    @Test
 //    void testCodeDuplicationRepetitionsFixableByInheritance() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test InheritanceInsteadOfEnums")
 //    @Test
 //    void testInheritanceInsteadOfEnums() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test OperationsInsteadOfDomain")
 //    @Test
 //    void testOperationsInsteadOfDomain() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test HardcodedLogic")
 //    @Test
 //    void testHardcodedLogic() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test StringReferences")
 //    @Test
 //    void testStringReferences() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test ExceptionsForControlFlow")
 //    @Test
 //    void testExceptionsForControlFlow() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test TryCatchBlock")
 //    @Test
 //    void testTryCatchBlock() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test UnspecifiedErrorMessage")
 //    @Test
 //    void testUnspecifiedErrorMessage() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
@@ -173,7 +170,7 @@ public class SonarQubeTests {
 //    @DisplayName("Test WrongLoopType")
 //    @Test
 //    void testWrongLoopType() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
@@ -181,68 +178,66 @@ public class SonarQubeTests {
 //    @DisplayName("Test UnnecessaryComplexity")
 //    @Test
 //    void testUnnecessaryComplexity() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test ClumsySolution")
 //    @Test
 //    void testClumsySolution() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test ParsingIntegerValues")
 //    @Test
 //    void testParsingIntegerValues() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test UtilityClass")
     @Test
     void testUtilityClass() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1118"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "1118");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
 //    @DisplayName("Test UnsafeCast")
 //    @Test
 //    void testUnsafeCast() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test EmptyConstructor")
 //    @Test
 //    void testEmptyConstructor() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test MeaninglessConstant")
 //    @Test
 //    void testMeaninglessConstant() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test Scanner")
 //    @Test
 //    void testScanner() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test UnusedElement")
     @Test
     void testUnusedElement() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "1144",
-                        rulePrefix + "1068",
-                        rulePrefix + "1481"
-                )
+        List<String> relevantIssueNumbers = List.of(
+            rulePrefix + "1144",
+            rulePrefix + "1068",
+            rulePrefix + "1481"
         );
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
@@ -250,124 +245,122 @@ public class SonarQubeTests {
 //    @DisplayName("Test MissingThrowsInMethodSignature")
 //    @Test
 //    void testMissingThrowsInMethodSignature() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test PublicEnumInClass")
 //    @Test
 //    void testPublicEnumInClass() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test ParsingIntegerValues")
 //    @Test
 //    void testClassOfConstants() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test TrivialJavaDoc")
 //    @Test
 //    void testTrivialJavaDoc() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test BadNaming")
 //    @Test
 //    void testBadNaming() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test DataEncapsulationViolation")
 //    @Test
 //    void testDataEncapsulationViolation() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test SeparationOfLogicAndInteraction")
 //    @Test
 //    void testSeparationOfLogicAndInteraction() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test TooComplexCode")
 //    @Test
 //    void testTooComplexCode() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test StaticMethods")
 //    @Test
 //    void testStaticMethods() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test StaticAttributeOfInstanceAttribute")
     @Test
     void testStaticAttributeOfInstanceAttribute() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1170"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "1170");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
     @DisplayName("Test FinalModifier")
     @Test
     void testFinalModifier() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "3008"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "3008");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
 //    @DisplayName("Test ParsingIntegerValues")
 //    @Test
 //    void testJavaAPI() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test ToStringVsEquals")
 //    @Test
 //    void testToStringVsEquals() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test DoNotUseObject")
 //    @Test
 //    void testDoNotUseObject() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test ClassInsteadOfInterface")
     @Test
     void testClassInsteadOfInterface() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1319"));
+        List<String> relevantIssueNumbers = List.of(rulePrefix + "1319");
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
 
 //    @DisplayName("Test EnumForClosedSet")
 //    @Test
 //    void testEnumForClosedSet() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
     @DisplayName("Test EmptyBlock")
     @Test
     void testEmptyBlock() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "2094",
-                        rulePrefix + "1186",
-                        rulePrefix + "108"
-                )
+        List<String> relevantIssueNumbers = List.of(
+            rulePrefix + "2094",
+            rulePrefix + "1186",
+            rulePrefix + "108"
         );
         checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
@@ -375,14 +368,14 @@ public class SonarQubeTests {
 //    @DisplayName("Test PackageUsage")
 //    @Test
 //    void testPackageUsage() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
 //    @DisplayName("Test DynamicBinding")
 //    @Test
 //    void testDynamicBinding() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
+//        List<String> relevantIssueNumbers = List.of(rulePrefix + "");
 //        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
 //    }
 
@@ -406,7 +399,7 @@ public class SonarQubeTests {
         }
     }
 
-    private List<Issue> findOccurringIssues(ArrayList<String> relevantIssueNumbers) {
+    private List<Issue> findOccurringIssues(List<String> relevantIssueNumbers) {
         return issues.stream().filter(issue -> relevantIssueNumbers.contains(issue.getRuleKey())).collect(Collectors.toList());
     }
 
